app/assets/javascripts/plugins/peg.parser.js
parser = (function(){
  /*
   * Generated by PEG.js 0.7.0.
   *
   * http://pegjs.majda.cz/
   */
  
  function quote(s) {
    /*
     * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
     * string literal except for the closing quote character, backslash,
     * carriage return, line separator, paragraph separator, and line feed.
     * Any character may appear in the form of an escape sequence.
     *
     * For portability, we also escape escape all control and non-ASCII
     * characters. Note that "\0" and "\v" escape sequences are not used
     * because JSHint does not like the first and IE the second.
     */
     return '"' + s
      .replace(/\\/g, '\\\\')  // backslash
      .replace(/"/g, '\\"')    // closing quote character
      .replace(/\x08/g, '\\b') // backspace
      .replace(/\t/g, '\\t')   // horizontal tab
      .replace(/\n/g, '\\n')   // line feed
      .replace(/\f/g, '\\f')   // form feed
      .replace(/\r/g, '\\r')   // carriage return
      .replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
      + '"';
  }
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "text": parse_text,
        "text_tags": parse_text_tags,
        "imag": parse_imag,
        "multicols": parse_multicols,
        "multicols_2": parse_multicols_2,
        "multicols_3": parse_multicols_3,
        "align": parse_align,
        "center": parse_center,
        "left": parse_left,
        "right": parse_right,
        "justify": parse_justify,
        "serif": parse_serif,
        "messages": parse_messages,
        "message": parse_message,
        "icon": parse_icon,
        "icon_l": parse_icon_l,
        "icon_r": parse_icon_r,
        "speaker": parse_speaker,
        "balloon": parse_balloon,
        "tags": parse_tags,
        "self": parse_self,
        "target": parse_target,
        "newline": parse_newline,
        "bold": parse_bold,
        "italic": parse_italic,
        "delete": parse_delete,
        "under": parse_under,
        "big": parse_big,
        "small": parse_small,
        "ruby": parse_ruby,
        "font_color": parse_font_color,
        "font_color1": parse_font_color1,
        "font_color2": parse_font_color2,
        "font_color3": parse_font_color3,
        "font_color4": parse_font_color4,
        "font_color5": parse_font_color5,
        "font_color6": parse_font_color6,
        "font_color7": parse_font_color7,
        "bold_tag": parse_bold_tag,
        "italic_tag": parse_italic_tag,
        "delete_tag": parse_delete_tag,
        "under_tag": parse_under_tag,
        "small_tag": parse_small_tag,
        "big_tag": parse_big_tag,
        "font_color_tag": parse_font_color_tag,
        "font_color1_tag": parse_font_color1_tag,
        "font_color2_tag": parse_font_color2_tag,
        "font_color3_tag": parse_font_color3_tag,
        "font_color4_tag": parse_font_color4_tag,
        "font_color5_tag": parse_font_color5_tag,
        "font_color6_tag": parse_font_color6_tag,
        "font_color7_tag": parse_font_color7_tag,
        "normal_tag": parse_normal_tag,
        "num": parse_num,
        "bra": parse_bra,
        "ket": parse_ket,
        "n1_9": parse_n1_9,
        "n0_9": parse_n0_9,
        "m": parse_m,
        "l": parse_l,
        "r": parse_r,
        "c": parse_c,
        "j": parse_j,
        "b": parse_b,
        "i": parse_i,
        "d": parse_d,
        "u": parse_u,
        "s": parse_s,
        "bg": parse_bg,
        "n": parse_n,
        "any": parse_any
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "text";
      }
      
      var pos = 0;
      var reportFailures = 0;
      var rightmostFailuresPos = 0;
      var rightmostFailuresExpected = [];
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        var escapeChar;
        var length;
        
        if (charCode <= 0xFF) {
          escapeChar = 'x';
          length = 2;
        } else {
          escapeChar = 'u';
          length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function matchFailed(failure) {
        if (pos < rightmostFailuresPos) {
          return;
        }
        
        if (pos > rightmostFailuresPos) {
          rightmostFailuresPos = pos;
          rightmostFailuresExpected = [];
        }
        
        rightmostFailuresExpected.push(failure);
      }
      
      function parse_text() {
        var result0, result1;
        var pos0;
        
        pos0 = pos;
        result0 = [];
        result1 = parse_text_tags();
        if (result1 === null) {
          result1 = parse_tags();
          if (result1 === null) {
            result1 = parse_any();
          }
        }
        while (result1 !== null) {
          result0.push(result1);
          result1 = parse_text_tags();
          if (result1 === null) {
            result1 = parse_tags();
            if (result1 === null) {
              result1 = parse_any();
            }
          }
        }
        if (result0 !== null) {
          result0 = (function(offset, text) { return peg_flatten(text).join(''); })(pos0, result0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_text_tags() {
        var result0;
        
        result0 = parse_imag();
        if (result0 === null) {
          result0 = parse_multicols();
          if (result0 === null) {
            result0 = parse_center();
            if (result0 === null) {
              result0 = parse_left();
              if (result0 === null) {
                result0 = parse_right();
                if (result0 === null) {
                  result0 = parse_justify();
                  if (result0 === null) {
                    result0 = parse_serif();
                  }
                }
              }
            }
          }
        }
        return result0;
      }
      
      function parse_imag() {
        var result0, result1, result2, result3, result4;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_bra();
        if (result0 !== null) {
          if (input.charCodeAt(pos) === 32117) {
            result1 = "\u7D75";
            pos++;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"\\u7D75\"");
            }
          }
          if (result1 !== null) {
            result2 = parse_num();
            if (result2 !== null) {
              result3 = parse_ket();
              if (result3 !== null) {
                result4 = parse_newline();
                result4 = result4 !== null ? result4 : "";
                if (result4 !== null) {
                  result0 = [result0, result1, result2, result3, result4];
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, num) { return '<div class="imag"><div class="imag_test">' + num + '</div></div>' + "\n"; })(pos0, result0[2]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_multicols() {
        var result0;
        
        result0 = parse_multicols_2();
        if (result0 === null) {
          result0 = parse_multicols_3();
        }
        return result0;
      }
      
      function parse_multicols_2() {
        var result0, result1, result2, result3, result4, result5, result6;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_bra();
        if (result0 !== null) {
          result1 = parse_m();
          if (result1 !== null) {
            if (/^[2\uFF12]/.test(input.charAt(pos))) {
              result2 = input.charAt(pos);
              pos++;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("[2\\uFF12]");
              }
            }
            if (result2 !== null) {
              result3 = parse_ket();
              if (result3 !== null) {
                result4 = parse_newline();
                result4 = result4 !== null ? result4 : "";
                if (result4 !== null) {
                  pos2 = pos;
                  result5 = parse_align();
                  if (result5 !== null) {
                    result6 = parse_align();
                    if (result6 !== null) {
                      result5 = [result5, result6];
                    } else {
                      result5 = null;
                      pos = pos2;
                    }
                  } else {
                    result5 = null;
                    pos = pos2;
                  }
                  if (result5 !== null) {
                    result0 = [result0, result1, result2, result3, result4, result5];
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, inner) { return '<div class="multicols_2">' + peg_flatten(inner).join('') + '</div>' + "\n"; })(pos0, result0[5]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_multicols_3() {
        var result0, result1, result2, result3, result4, result5, result6, result7;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_bra();
        if (result0 !== null) {
          result1 = parse_m();
          if (result1 !== null) {
            if (/^[3\uFF13]/.test(input.charAt(pos))) {
              result2 = input.charAt(pos);
              pos++;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("[3\\uFF13]");
              }
            }
            result2 = result2 !== null ? result2 : "";
            if (result2 !== null) {
              result3 = parse_ket();
              if (result3 !== null) {
                result4 = parse_newline();
                result4 = result4 !== null ? result4 : "";
                if (result4 !== null) {
                  pos2 = pos;
                  result5 = parse_align();
                  if (result5 !== null) {
                    result6 = parse_align();
                    if (result6 !== null) {
                      result7 = parse_align();
                      if (result7 !== null) {
                        result5 = [result5, result6, result7];
                      } else {
                        result5 = null;
                        pos = pos2;
                      }
                    } else {
                      result5 = null;
                      pos = pos2;
                    }
                  } else {
                    result5 = null;
                    pos = pos2;
                  }
                  if (result5 !== null) {
                    result0 = [result0, result1, result2, result3, result4, result5];
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, inner) { return '<div class="multicols_3">' + peg_flatten(inner).join('') + '</div>' + "\n"; })(pos0, result0[5]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_align() {
        var result0;
        
        result0 = parse_left();
        if (result0 === null) {
          result0 = parse_center();
          if (result0 === null) {
            result0 = parse_right();
          }
        }
        return result0;
      }
      
      function parse_center() {
        var result0, result1, result2, result3, result4, result5, result6;
        var pos0, pos1, pos2, pos3;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_bra();
        if (result0 !== null) {
          result1 = parse_c();
          if (result1 !== null) {
            result2 = parse_ket();
            if (result2 !== null) {
              result3 = parse_newline();
              result3 = result3 !== null ? result3 : "";
              if (result3 !== null) {
                pos2 = pos;
                pos3 = pos;
                reportFailures++;
                result5 = parse_text_tags();
                reportFailures--;
                if (result5 === null) {
                  result5 = "";
                } else {
                  result5 = null;
                  pos = pos3;
                }
                if (result5 !== null) {
                  result6 = parse_tags();
                  if (result6 === null) {
                    result6 = parse_any();
                  }
                  if (result6 !== null) {
                    result5 = [result5, result6];
                  } else {
                    result5 = null;
                    pos = pos2;
                  }
                } else {
                  result5 = null;
                  pos = pos2;
                }
                if (result5 !== null) {
                  result4 = [];
                  while (result5 !== null) {
                    result4.push(result5);
                    pos2 = pos;
                    pos3 = pos;
                    reportFailures++;
                    result5 = parse_text_tags();
                    reportFailures--;
                    if (result5 === null) {
                      result5 = "";
                    } else {
                      result5 = null;
                      pos = pos3;
                    }
                    if (result5 !== null) {
                      result6 = parse_tags();
                      if (result6 === null) {
                        result6 = parse_any();
                      }
                      if (result6 !== null) {
                        result5 = [result5, result6];
                      } else {
                        result5 = null;
                        pos = pos2;
                      }
                    } else {
                      result5 = null;
                      pos = pos2;
                    }
                  }
                } else {
                  result4 = null;
                }
                if (result4 !== null) {
                  result0 = [result0, result1, result2, result3, result4];
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, inner) { return '<div class="align_center">'   + peg_flatten(inner).join('') + '</div>' + "\n"; })(pos0, result0[4]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_left() {
        var result0, result1, result2, result3, result4, result5, result6;
        var pos0, pos1, pos2, pos3;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_bra();
        if (result0 !== null) {
          result1 = parse_l();
          if (result1 !== null) {
            result2 = parse_ket();
            if (result2 !== null) {
              result3 = parse_newline();
              result3 = result3 !== null ? result3 : "";
              if (result3 !== null) {
                pos2 = pos;
                pos3 = pos;
                reportFailures++;
                result5 = parse_text_tags();
                reportFailures--;
                if (result5 === null) {
                  result5 = "";
                } else {
                  result5 = null;
                  pos = pos3;
                }
                if (result5 !== null) {
                  result6 = parse_tags();
                  if (result6 === null) {
                    result6 = parse_any();
                  }
                  if (result6 !== null) {
                    result5 = [result5, result6];
                  } else {
                    result5 = null;
                    pos = pos2;
                  }
                } else {
                  result5 = null;
                  pos = pos2;
                }
                if (result5 !== null) {
                  result4 = [];
                  while (result5 !== null) {
                    result4.push(result5);
                    pos2 = pos;
                    pos3 = pos;
                    reportFailures++;
                    result5 = parse_text_tags();
                    reportFailures--;
                    if (result5 === null) {
                      result5 = "";
                    } else {
                      result5 = null;
                      pos = pos3;
                    }
                    if (result5 !== null) {
                      result6 = parse_tags();
                      if (result6 === null) {
                        result6 = parse_any();
                      }
                      if (result6 !== null) {
                        result5 = [result5, result6];
                      } else {
                        result5 = null;
                        pos = pos2;
                      }
                    } else {
                      result5 = null;
                      pos = pos2;
                    }
                  }
                } else {
                  result4 = null;
                }
                if (result4 !== null) {
                  result0 = [result0, result1, result2, result3, result4];
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, inner) { return '<div class="align_left">'     + peg_flatten(inner).join('') + '</div>' + "\n"; })(pos0, result0[4]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_right() {
        var result0, result1, result2, result3, result4, result5, result6;
        var pos0, pos1, pos2, pos3;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_bra();
        if (result0 !== null) {
          result1 = parse_r();
          if (result1 !== null) {
            result2 = parse_ket();
            if (result2 !== null) {
              result3 = parse_newline();
              result3 = result3 !== null ? result3 : "";
              if (result3 !== null) {
                pos2 = pos;
                pos3 = pos;
                reportFailures++;
                result5 = parse_text_tags();
                reportFailures--;
                if (result5 === null) {
                  result5 = "";
                } else {
                  result5 = null;
                  pos = pos3;
                }
                if (result5 !== null) {
                  result6 = parse_tags();
                  if (result6 === null) {
                    result6 = parse_any();
                  }
                  if (result6 !== null) {
                    result5 = [result5, result6];
                  } else {
                    result5 = null;
                    pos = pos2;
                  }
                } else {
                  result5 = null;
                  pos = pos2;
                }
                if (result5 !== null) {
                  result4 = [];
                  while (result5 !== null) {
                    result4.push(result5);
                    pos2 = pos;
                    pos3 = pos;
                    reportFailures++;
                    result5 = parse_text_tags();
                    reportFailures--;
                    if (result5 === null) {
                      result5 = "";
                    } else {
                      result5 = null;
                      pos = pos3;
                    }
                    if (result5 !== null) {
                      result6 = parse_tags();
                      if (result6 === null) {
                        result6 = parse_any();
                      }
                      if (result6 !== null) {
                        result5 = [result5, result6];
                      } else {
                        result5 = null;
                        pos = pos2;
                      }
                    } else {
                      result5 = null;
                      pos = pos2;
                    }
                  }
                } else {
                  result4 = null;
                }
                if (result4 !== null) {
                  result0 = [result0, result1, result2, result3, result4];
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, inner) { return '<div class="align_right">'    + peg_flatten(inner).join('') + '</div>' + "\n"; })(pos0, result0[4]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_justify() {
        var result0, result1, result2, result3, result4, result5, result6;
        var pos0, pos1, pos2, pos3;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_bra();
        if (result0 !== null) {
          result1 = parse_j();
          if (result1 !== null) {
            result2 = parse_ket();
            if (result2 !== null) {
              result3 = parse_newline();
              result3 = result3 !== null ? result3 : "";
              if (result3 !== null) {
                pos2 = pos;
                pos3 = pos;
                reportFailures++;
                result5 = parse_text_tags();
                reportFailures--;
                if (result5 === null) {
                  result5 = "";
                } else {
                  result5 = null;
                  pos = pos3;
                }
                if (result5 !== null) {
                  result6 = parse_tags();
                  if (result6 === null) {
                    result6 = parse_any();
                  }
                  if (result6 !== null) {
                    result5 = [result5, result6];
                  } else {
                    result5 = null;
                    pos = pos2;
                  }
                } else {
                  result5 = null;
                  pos = pos2;
                }
                if (result5 !== null) {
                  result4 = [];
                  while (result5 !== null) {
                    result4.push(result5);
                    pos2 = pos;
                    pos3 = pos;
                    reportFailures++;
                    result5 = parse_text_tags();
                    reportFailures--;
                    if (result5 === null) {
                      result5 = "";
                    } else {
                      result5 = null;
                      pos = pos3;
                    }
                    if (result5 !== null) {
                      result6 = parse_tags();
                      if (result6 === null) {
                        result6 = parse_any();
                      }
                      if (result6 !== null) {
                        result5 = [result5, result6];
                      } else {
                        result5 = null;
                        pos = pos2;
                      }
                    } else {
                      result5 = null;
                      pos = pos2;
                    }
                  }
                } else {
                  result4 = null;
                }
                if (result4 !== null) {
                  result0 = [result0, result1, result2, result3, result4];
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, inner) { return '<div class="align_justify">'  + peg_flatten(inner).join('') + '</div>' + "\n"; })(pos0, result0[4]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_serif() {
        var result0, result1, result2;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        reportFailures++;
        result0 = parse_icon_l();
        if (result0 === null) {
          result0 = parse_icon_r();
        }
        reportFailures--;
        if (result0 !== null) {
          result0 = "";
          pos = pos1;
        } else {
          result0 = null;
        }
        if (result0 !== null) {
          result1 = parse_message();
          if (result1 !== null) {
            result2 = parse_newline();
            result2 = result2 !== null ? result2 : "";
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos0;
            }
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        return result0;
      }
      
      function parse_messages() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_message();
        if (result0 !== null) {
          result1 = parse_newline();
          result1 = result1 !== null ? result1 : "";
          if (result1 !== null) {
            result3 = parse_serif();
            if (result3 !== null) {
              result2 = [];
              while (result3 !== null) {
                result2.push(result3);
                result3 = parse_serif();
              }
            } else {
              result2 = null;
            }
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 === null) {
          result0 = parse_message();
        }
        result0 = result0 !== null ? result0 : "";
        if (result0 !== null) {
          result0 = (function(offset, messages) { return peg_flatten(messages).join(''); })(pos0, result0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_message() {
        var result0, result1, result2, result3, result4, result5, result6;
        var pos0, pos1, pos2, pos3;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_icon();
        if (result0 !== null) {
          result1 = parse_speaker();
          if (result1 !== null) {
            result2 = parse_balloon();
            if (result2 !== null) {
              result3 = parse_newline();
              result3 = result3 !== null ? result3 : "";
              if (result3 !== null) {
                pos2 = pos;
                pos3 = pos;
                reportFailures++;
                result5 = parse_text_tags();
                reportFailures--;
                if (result5 === null) {
                  result5 = "";
                } else {
                  result5 = null;
                  pos = pos3;
                }
                if (result5 !== null) {
                  result6 = parse_tags();
                  if (result6 === null) {
                    result6 = parse_any();
                  }
                  if (result6 !== null) {
                    result5 = [result5, result6];
                  } else {
                    result5 = null;
                    pos = pos2;
                  }
                } else {
                  result5 = null;
                  pos = pos2;
                }
                if (result5 !== null) {
                  result4 = [];
                  while (result5 !== null) {
                    result4.push(result5);
                    pos2 = pos;
                    pos3 = pos;
                    reportFailures++;
                    result5 = parse_text_tags();
                    reportFailures--;
                    if (result5 === null) {
                      result5 = "";
                    } else {
                      result5 = null;
                      pos = pos3;
                    }
                    if (result5 !== null) {
                      result6 = parse_tags();
                      if (result6 === null) {
                        result6 = parse_any();
                      }
                      if (result6 !== null) {
                        result5 = [result5, result6];
                      } else {
                        result5 = null;
                        pos = pos2;
                      }
                    } else {
                      result5 = null;
                      pos = pos2;
                    }
                  }
                } else {
                  result4 = null;
                }
                if (result4 !== null) {
                  result0 = [result0, result1, result2, result3, result4];
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, icon, speaker, balloon, message) {
          if(icon[0]=='l') {
            return '<div class="serif left"><div class="icon"><div class="icon_test">'  + icon[1] + '</div>' + speaker + '</div>' + '<div class="balloon' + balloon + '">' + peg_flatten(message).join('') + '</div></div>' + "\n";
          }else{
            return '<div class="serif right"><div class="icon"><div class="icon_test">' + icon[1] + '</div>' + speaker + '</div>' + '<div class="balloon' + balloon + '">' + peg_flatten(message).join('') + '</div></div>' + "\n";
          }
        })(pos0, result0[0], result0[1], result0[2], result0[4]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_icon() {
        var result0;
        var pos0;
        
        result0 = parse_icon_l();
        if (result0 === null) {
          result0 = parse_icon_r();
          if (result0 === null) {
            pos0 = pos;
            result0 = "";
            if (result0 !== null) {
              result0 = (function(offset) { return ['l',   0]; })(pos0);
            }
            if (result0 === null) {
              pos = pos0;
            }
          }
        }
        return result0;
      }
      
      function parse_icon_l() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_bra();
        if (result0 !== null) {
          result1 = parse_l();
          result1 = result1 !== null ? result1 : "";
          if (result1 !== null) {
            result2 = parse_num();
            if (result2 !== null) {
              result3 = parse_ket();
              if (result3 !== null) {
                result0 = [result0, result1, result2, result3];
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
